<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fluxeem_ros2_publisher</name>
  <version>0.0.0</version>
  <description>A basic ros2 event publisher, which supports directly publishing event array or using shared memory</description>
  <maintainer email="pengxi.zeng@fluxeem.com">pengxi.zeng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>event_msgs</depend>
  <depend>camera_interfaces</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
